unpackaged/main/default/objects/Dealer_Fee_Product__c/Dealer_Fee_Product__c.object-meta.xml
<CustomObject>
    <label>Dealer Fee Product</label>
    <nameField>
        <label>Dealer Fee Product	 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Fee Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>