unpackaged/main/default/objects/Dealer_Fee_Product__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dealer Fee Products</relationshipLabel>
    <relationshipName>Dealer_Fee_Products</relationshipName>
    <type>Lookup</type>
</CustomField>