unpackaged/main/default/objects/Dealer_Fee_Product__c/fields/Dealer_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Fee_Rate__c</fullName>
    <label>Dealer Fee Rate</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>