unpackaged/main/default/objects/Dealer_Fee_Product__c/fields/Financing_Tool__c.field-meta.xml
<CustomField>
    <fullName>Financing_Tool__c</fullName>
    <label>Financing Tool</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Dividend Loan</fullName>
            </value>
            <value>
                <fullName>Financed</fullName>
            </value>
            <value>
                <fullName>Loanpal</fullName>
            </value>
            <value>
                <fullName>Loan Pal</fullName>
            </value>
            <value>
                <fullName>Loan Pal - SubPrime</fullName>
            </value>
            <value>
                <fullName>Mosaic Loan</fullName>
            </value>
            <value>
                <fullName>Operations Only</fullName>
            </value>
            <value>
                <fullName>Sunlight</fullName>
            </value>
            <value>
                <fullName>Sunnova Lease</fullName>
            </value>
            <value>
                <fullName>Sunnova Loan/Ownership</fullName>
            </value>
            <value>
                <fullName>SunRun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>