unpackaged/main/default/objects/Dealer_Fee_Product__c/listViews/Sunlight_Dealer_Fee_Products.listView-meta.xml
<ListView>
    <fullName>Sunlight_Dealer_Fee_Products</fullName>
    <columns>Active_Status__c</columns>
    <columns>NAME</columns>
    <columns>Financing_Tool__c</columns>
    <columns>APR__c</columns>
    <columns>Loan_Term__c</columns>
    <columns>Classification__c</columns>
    <columns>Dealer_Fee_Rate__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Financing_Tool__c</field>
        <operation>equals</operation>
        <value>Sunlight</value>
    </filters>
    <filters>
        <field>Classification__c</field>
        <operation>equals</operation>
        <value>Internal</value>
    </filters>
    <label>Sunlight Dealer Fee Products</label>
    <sharedTo>
        <roleAndSubordinates>Accounting</roleAndSubordinates>
        <roleAndSubordinates>Operations_Manager</roleAndSubordinates>
    </sharedTo>
</ListView>