unpackaged/main/default/objects/Dealer_Fee_Product__c/listViews/Sunnova_Dealer_Fee_View1.listView-meta.xml
<ListView>
    <fullName>Sunnova_Dealer_Fee_View1</fullName>
    <columns>Active_Status__c</columns>
    <columns>NAME</columns>
    <columns>Financing_Tool__c</columns>
    <columns>Loan_Term__c</columns>
    <columns>APR__c</columns>
    <columns>Classification__c</columns>
    <columns>Dealer_Fee_Rate__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Channel_Partner__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <label>Dealer Fee View</label>
    <sharedTo>
        <role>Accounting</role>
        <role>Operations_Manager</role>
    </sharedTo>
</ListView>